fix discrepancies on mobile devices

--- a/src/components/app-footer/app-footer.module.css
+++ b/src/components/app-footer/app-footer.module.css
@@ -15,7 +15,7 @@
 
 .tagline {
   margin: 0;
-  font-weight: 100;
+  font-weight: 200;
   font-size: var(--font-size-medium);
   font-style: normal;
 }
