--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -16,7 +16,7 @@
 
 .tagline {
   margin: 0;
-  font-weight: 100;
+  font-weight: 200;
   font-size: var(--font-size-large);
   font-style: normal;
 }
